# one-class

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: config.py  export_onnx.py  infer_onnx.py  predict.py  run_anomalib.py  split.py  train.py
src/one_class/: __init__.py  data.py  model.py  pipeline.py
